elk/kibana/k8s/kibana-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: logging-kibana
  namespace: kube-system
  labels:
    k8s-app: kibana
    task: logging
spec:
  template:
    metadata:
      labels:
        k8s-app: kibana
        task: logging
      name: logging-kibana
    spec:
      containers:
      - name: kibana
        image: 172.31.21.226/library/kibana:6.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5601
          name: http
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /usr/share/kibana/config/kibana.yml
          subPath: kibana.yml
      volumes:
      - name: config
        configMap:
          name: kibana-config
