elk/kibana/k8s/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: kibana
    task: logging
  name: logging-kibana
  namespace: kube-system
spec:
  ports:
  - port: 5601
    targetPort: 5601
    name: http
  selector:
    k8s-app: kibana
